src/snapshots/ck__ui_tests__theme_picker.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  Settings

  Appearance
  ▌ Theme             material                          Live preview while choosing
    Colors            as the theme has them             Change any color of the current theme
    Color depth       auto (24-bit)                     24-bit color, or the nearest of 256
    Reading position  30% from the edges                How far from the edges the selected post…

  Catalog
    Default layout    ca  Theme                    enter keep · esc cancel  a board's own
    Images            on                                                    mage viewer (after a…
    NSFW boards       im▌ material                                           site marks NSFW
    Board images      no  material-light                                    n image setting (. m…
    Filters           0   nord                                               pattern; X adds one…
    Hidden words      no  gruvbox                                           ese words are hidden…
    Hidden replies    sh  catppuccin                                         to a hidden post ar…
                          tokyo-night
  Background refresh      solarized-light
    Open thread       ev  terminal                                          hread updates
    Watched threads   ev  mono                                              ed thread updates
    Notifications     au                                                     threads, replies to…
    Reading the end   new posts come into view          New posts come into view while you read …

  Sites
    Add a site        23 sites so far                   Paste a link to any page of it; ck finds…
    Your sites        only the built-in ones            The ones you added, or built-in ones you…

  Downloads
    Folder            ~/Downloads/ck/{site}/{board}/{…  Where saved files and pages go
 enter change   esc back   ? help
