src/snapshots/ck__ui_tests__thread_gone_offers_the_saved_copy.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Thread










                    The thread is gone. enter opens its saved copy from 5h ago.

















  !  Thread was deleted or archived. A saved copy from 5h ago: enter opens it, a opens it in desuarc
