src/snapshots/ck__ui_tests__watched.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  Watched                                                                    3 threads  ·  2 new

    4chan      /g/       Snapshot thread                                          2 new   5 posts
    4chan      /g/       Old thread                                  archived/deleted   300 posts
    lainchan   /λ/       Programming Employment                                          92 posts
























 enter open   x remove   / filter   o browser   , settings   ? help
